# knight-mcq

./: .env.example  .gitignore  CITATION.bib  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  tests.yml
app/core/agents/gpt/: chatbot.py  term_description.py  text_processing.py
app/core/agents/rebel/: chatbot.py  term_description.py  text_processing.py
app/core/common/: check_connection.py  config.py  neo4j_connection.py
app/core/utils/: external_knowledge.py  graph_utils.py  wikipedia_lookup.py
app/generation/: qa_generation.py
app/tests/: test_chatbot.py  test_qa_generation.py  test_sanity.py  test_text_processing.py
